syntax="proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package user;

// option go_package = "github.com/mch735/education/work5/pkg/proto";
option go_package = "gen/userpb";

service UserService {
    rpc GetUsers(google.protobuf.Empty) returns (UsersResponse);
	rpc GetUserByID(ID) returns (UserResponse);
	rpc Create(UserRequest) returns (UserResponse);
	rpc Update(UserRequest) returns (UserResponse);
	rpc Delete(ID) returns (google.protobuf.Empty);
}

message ID {
    string id = 1;
}

message UserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UsersResponse {
    repeated UserResponse users = 1;
}